Fix profile image overflow bug on Safari

--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,7 @@ h1 {
   height: 120%;
   bottom: 0;
   overflow: hidden;
+  clip-path: content-box;
 }
 
 .profile-img-container img {
